# dossie-engine

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: parsing_report_projeto_frank.json  plano_tecnico.md
src/: __init__.py  cli.py  cli_test.txt
src/enrichment/: __init__.py  enricher.py  fetcher.py  sources.py
src/exporters/: __init__.py  pptx_exporter.py  xlsx_exporter.py
src/llm/: client.py  prompts.py
src/models/: __init__.py  company.py  dossier.py  evidence.py  financials.py  market.py
src/parsers/: competitor_parser.py  financial_parser.py  ocr_helper.py  pdf_parser.py  profile_parser.py  team_parser.py  xlsx_financial_parser.py
src/pipeline/: __init__.py  assembler.py  classifier.py  llm_extractor.py  orchestrator.py  rules_extractor.py
src/storage/: versioning.py
src/valuation/: _init__.py  dcf.py  model.py  multiples.py  scenarios.py
tests/: _helpers.py  _regenera_synthetic.py  conftest.py  debug_extraction.py  test_e2_multi_input.py  test_e3_2_enrichment.py  test_e3_4_clean.py  test_e3_5_overrides.py  test_e3_classifier.py  test_e3_scenarios.py  test_e4_irr_moic.py  test_e5_visual.py  test_financial_parser.py  test_frank_regression.py  test_full_dossier.py  test_pdf_pipeline.py  test_regenera_regression.py  test_xlsx_parser.py
tests/fixtures/: README.md
