[project]
name = "dossie-engine"
version = "0.1.0"
description = "Sistema de geração inteligente de dossiês a partir de documentos de transação"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "pdfminer.six>=20221105",
    "python-pptx>=1.0",
    "python-docx>=1.0",
    "anthropic>=0.40",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
dossie = "src.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
